--- a/databaseFun.ipynb
+++ b/databaseFun.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys, os, io\n",
     "import pyodbc, pandas\n",
-    "import datetime"
+    "import datetime, tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,17 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chunk written\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sqlVenezolanas = \"SELECT Id FROM Pacientes WHERE Identificacion LIKE 'VEN%'\"\n",
     "def downloadPatientsAndRegistersFromPatients(cnxn, sqlPatients, pathWriteFolder):\n",
@@ -96,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,90 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n",
-      "Chunk written\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "downloadPatientsAndRegistersFromDate(cnxn, '01/01/2019', '01/01/2020', 'casos2019')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +165,7 @@
     "cols = []\n",
     "values = []\n",
     "i = 0\n",
-    "for i in range(len(df)):\n",
+    "for i in tqdm.tqdm_notebook(range(len(df))):\n",
     "    for c in colNames:\n",
     "\n",
     "        if c in df and df.iloc[i][c] == df.iloc[i][c]:\n",
@@ -256,7 +174,10 @@
     "    try:\n",
     "        cursor.execute(\"insert into nivel_N1(%s) values (\\'%s\\')\" % ( ','.join(cols), '\\',\\''.join(map(str,values))))\n",
     "    except:\n",
-    "        pass"
+    "        pass\n",
+    "    if i == 1000:\n",
+    "        break\n",
+    "cnxn.commit()"
    ]
   },
   {
@@ -264,7 +185,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pandas.read_sql_query(\"select TOP 5 * from Nivel_N1 where VAR_0019 = 'VEN25322789' \", cnxn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.iloc[0].VAR_0019"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "VEN25322789"
+   ]
   }
  ],
  "metadata": {
