--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -167,15 +167,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "math.fabs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import math\n",
     "def relErrorInLimits(v1, v2, th = .05):\n",
     "    try:\n",
@@ -235,28 +226,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#Quality control\n",
     "n = len(df)\n",
     "for c in df.columns:\n",
     "    if sum(df[c] != df[c])/n > .05:\n",
     "        print(c, sum(df[c] != df[c])/n )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "66/2100"
    ]
   },
   {
@@ -307,6 +282,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tests"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -317,72 +299,6 @@
     "for c,  _ in df[df['sufrimientoFetal'] == 'SI'].iterrows():\n",
     "    et = ET.fromstring(processedDatasets[c].epicrisis.RegistroXML)\n",
     "    print(parsingDatabaseUtils.findInXML('MedicamentosAdministrado', et ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "df[df['VAR_0425'].isna()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "for _, p in processedDatasets['AD218865'].registrosRecienNacido['796790'].items():\n",
-    "    parsingDatabaseUtils.prettyPrintXML(p.RegistroXML)\n",
-    "    print('------')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "len(df.loc[df['VAR_0314'] != df['VAR_0314']])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "errorCount = 0\n",
-    "for c,v in resSIP.items():\n",
-    "    if len(v) == 0:\n",
-    "        errorCount += 1\n",
-    "print(errorCount)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "from __future__ import print_function\n",
-    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-    "def f(c):\n",
-    "    parsingDatabaseUtils.prettyPrintXML(processedDatasets[c].procedure.XmlDescripcion)\n",
-    "interact(lambda i: f(l[i]), i = (0, len(l)))"
    ]
   },
   {
@@ -408,15 +324,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "c = noIngreso[10]\n",
-    "registrosByCaso.get_group(c)\n",
-    "#parsingDatabaseUtils.prettyPrintXML(registros.loc['1025813', 'RegistroXML'])\n",
-    "#casos.loc[casos.Paciente == 184931 ]"
+    "pacientes.loc[str(casos.loc[noIngreso[0], 'Paciente'])], noIngreso[0], casos.loc[noIngreso[0]]"
    ]
   },
   {
@@ -425,39 +336,26 @@
    "metadata": {
     "Collapsed": "false"
    },
+   "outputs": [],
+   "source": [
+    "#count = 0\n",
+    "#for c, p in processedDatasets.items():\n",
+    "#    if p.epicrisis is None:\n",
+    "#        continue\n",
+    "#    et = ET.fromstring(p.epicrisis.RegistroXML)\n",
+    "#    ant = parsingDatabaseUtils.fullCleanTxt(parsingDatabaseUtils.findInXML('AntecedentesHTML', et))\n",
+    "#    if not 'paracli' in ant:\n",
+    "#        count += 1\n",
+    "#    else:\n",
+    "#        print(ant)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "count = 0\n",
-    "for c, p in processedDatasets.items():\n",
-    "    if p.epicrisis is None:\n",
-    "        continue\n",
-    "    et = ET.fromstring(p.epicrisis.RegistroXML)\n",
-    "    ant = parsingDatabaseUtils.fullCleanTxt(parsingDatabaseUtils.findInXML('AntecedentesHTML', et))\n",
-    "    if not 'paracli' in ant:\n",
-    "        count += 1\n",
-    "    else:\n",
-    "        print(ant)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "count"
-   ]
   },
   {
    "cell_type": "code",
@@ -470,17 +368,6 @@
     "c = 'AD284225'\n",
     "k = next(iter(processedDatasets[c].registrosRecienNacido.keys()))\n",
     "parsingDatabaseUtils.prettyPrintXML(processedDatasets[c].registrosRecienNacido[k][k].RegistroXML)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "count"
    ]
   },
   {
@@ -523,116 +410,6 @@
    "source": [
     "c = list(processedDatasets.keys())[244]\n",
     "parsingDatabaseUtils.prettyPrintXML(processedDatasets[c].epicrisis.RegistroXML)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "# read paraclinics. Assume that the date is just bmonthre them, or in the same line\n",
-    "\n",
-    "pos = ['pos', '\\+', 'reac']\n",
-    "neg = ['neg', '-', 'no']\n",
-    "vih1  = 'vih\\s*[1i]'\n",
-    "vih2 = 'vih\\s*(:?2|ii)'\n",
-    "vih12 = 'vih\\s*[1i]\\s*(:?2|ii)'\n",
-    "prt = '(:?PRUEBA RAPIDA TREPONEMICA|PRT)'\n",
-    "vdrl = '(:?VDRL|SIF[A-Z]*|RPR|FTA|FTA ABS)'\n",
-    "floatParse = '[0-9]*[\\.,]?[0-9]+'\n",
-    "\n",
-    "hematology = {\n",
-    "'HCT' : '(HCT|HTO|HTC|HEMATO[A-Z]*)',\n",
-    "'HB' : '(HB|HEMOGLOB[A-Z]*)',\n",
-    "'LEU' : '(LEU[A-Z]*)',\n",
-    "'NEU' : '(NEU[A-Z]*)',\n",
-    "'LIN' : '(LIN)',\n",
-    "'MONO' : '(MONO[A-Z]*)',\n",
-    "'PLAQ' : '(PL[A-Z]*|PQT)'}\n",
-    "\n",
-    "meses = ['ENERO', 'FEBRERO', 'MARZO', 'ABRIL', 'MAYO', 'JUNIO', 'JULIO', 'AGOSTO', 'SEPTIEMBRE', 'OCTUBRE', 'NOVIEMBRE', 'DICIEMBRE']\n",
-    "meses = meses + list(map(lambda s: s[:3], meses))\n",
-    "sep= '\\s*[,;:]?\\s*'\n",
-    "separadorFecha = '(?:[\\.\\\\/-]|DE|DEL|\\s)'\n",
-    "date =  ' \\(?' +  '((?:[0-9]|[0-3][0-9])'+ sep + separadorFecha + sep + '(?:[0-9]+|%s)'%  '|'.join(meses) + \\\n",
-    "                       sep + separadorFecha + sep + '(?:[0-9]+))' + '\\)?' \n",
-    "\n",
-    "def parseParaclinics(r, lastDate = None):\n",
-    "    \n",
-    "    if not isinstance(r, str):\n",
-    "        rET = ET.fromstring(r.RegistroXML)\n",
-    "        rTxt = parsingDatabaseUtils.fullCleanTxt(parsingDatabaseUtils.findInXML('AntecedentesHTML', rET))\n",
-    "        rTxt = parsingDatabaseUtils.removeWords(rTxt, ['de', 'y', 'a', 'el', 'los'])\n",
-    "    else:\n",
-    "        rTxt = r\n",
-    "        \n",
-    "        \n",
-    "    lastDate = None\n",
-    "    results = collections.defaultdict(dict)\n",
-    "    results['text'] = rTxt\n",
-    "    if re.findall('(no|sin|ni) (prese[a-z]*|tien[a-z]*|tra[a-z]*)(\\s)*para', rTxt):\n",
-    "        results['sinParaclinicos'] = True\n",
-    "        return results\n",
-    "    \n",
-    "    for i, l in enumerate(rTxt.splitlines()):\n",
-    "        l = ' ' + l\n",
-    "        # use instead dateparser.search.search_dates  <- it goes too slow\n",
-    "        d = re.findall(date, l, re.IGNORECASE)\n",
-    "        # dFiltered = [dateparser.parse(dd) for dd in d]\n",
-    "        #dFiltered = [dd for dd in dFiltered if dd]\n",
-    "\n",
-    "        if len(d) == 1.:\n",
-    "            dateParsed = parsingDatabaseUtils.parseDate(d[0])\n",
-    "            if dateParsed:\n",
-    "                #lastDate ='%02d/%02d/%d' %(dateParsed.day, dateParsed.month, dateParsed.year)\n",
-    "                lastDate = '/'.join(dateParsed)\n",
-    "        elif len(d):\n",
-    "            lastDate = None\n",
-    "            \n",
-    "            \n",
-    "        if len(d) <= 1 and lastDate:\n",
-    "            #Hematology\n",
-    "            for p, v in hematology.items():\n",
-    "                hematologyRes = re.findall('%s (%s)[^x]' % (v, floatParse), l, re.IGNORECASE)\n",
-    "                if hematologyRes:\n",
-    "                    results[lastDate][p] = hematologyRes[0][1]\n",
-    "\n",
-    "            #sifilis\n",
-    "            sif1 = ' ' + vdrl + \" (%s)\" % '|'.join(pos + neg)\n",
-    "            searchSif1 = re.findall(sif1, l, re.IGNORECASE)\n",
-    "            sif2 = ' ' + prt + \" (%s)\" % '|'.join(pos + neg)    \n",
-    "            searchSif2 = re.findall(sif2, l, re.IGNORECASE)\n",
-    "            if searchSif1:\n",
-    "                results[lastDate]['vdrl'] =searchSif1[0][1] in pos\n",
-    "            if searchSif2:\n",
-    "                results[lastDate]['prt'] =searchSif2[0][1] in pos\n",
-    "            # TODO: vih\n",
-    "    return results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "outputs": [],
-   "source": [
-    "def paraclinicsToDF(p):\n",
-    "    res = {}\n",
-    "    res['noParaclinicalTestsConfirmed'] = 'sinParaclinicos' in p\n",
-    "    i = 0\n",
-    "    for date in sorted(p.keys()):\n",
-    "        if date  in ['sinParaclinicos', 'text']: \n",
-    "            continue\n",
-    "        res['day_%d' % i] = date\n",
-    "        for k, v in p[date].items():\n",
-    "            res['day_%d' % i + k] = v \n",
-    "        i += 1\n",
-    "    return res"
    ]
   },
   {
