some minr changes

--- a/databaseFun.ipynb
+++ b/databaseFun.ipynb
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "cnxn = pyodbc.connect('Driver={Microsoft Access Driver (*.mdb, *.accdb)};'+ \\\n",
-    "                      'DBQ=C:\\\\sip\\\\SIP_Respaldo\\\\sip20200302.mdb;')\n",
+    "                      'DBQ=C:\\\\sip\\\\SIP_Respaldo\\\\sip20200309.mdb;')\n",
     "cursor = cnxn.cursor()"
    ]
   },
@@ -149,9 +149,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def toInt(s, d = 1):\n",
+    "    try:\n",
+    "        s = str(int(s))\n",
+    "        return addZeros(s, d)\n",
+    "    except:\n",
+    "        return \"X\"\n",
+    "def addZeros(s, d):\n",
+    "    return '0' * (d - len(s)) + s "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = pandas.read_csv('resultsSIP.csv', index_col = 0)\n",
-    "df['ID01'] = df['VAR_0019'].map(lambda s: '000000000008060061-80000000000' + s)\n",
-    "df['VAR_0198'] = df['VAR_0198'].map(lambda s: str(int(s)) if s == s else s)"
+    "placeId = '806001061-8'\n",
+    "placeId = addZeros(placeId, 20)\n",
+    "df['ID01'] = placeId + df['VAR_0019'].map(lambda s: addZeros(s,20))  \\\n",
+    "                                          + df['VAR_0040'].map(lambda s: toInt(s, 2)) + df['VAR_0286'].map(toInt)\n",
+    "\n",
+    "df['VAR_0198'] = df['VAR_0198'].map(lambda s: str(int(s)) if s == s else s)\n",
+    "df['VERSION'] = '4.1.2'\n",
+    "df['FECHA'] = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "df['HORA'] = datetime.datetime.now().strftime(\"%H:%M:%S\")\n",
+    "df['USUARIO'] = 'CMRC-AUTO'"
    ]
   },
   {
@@ -162,20 +186,26 @@
    "source": [
     "fullCols = list(map(lambda s: s, cursor.columns(table='nivel_N1')))\n",
     "colNames = list(map(lambda s: s[3], cursor.columns(table='nivel_N1')))\n",
-    "cols = []\n",
-    "values = []\n",
+    "\n",
     "i = 0\n",
     "for i in tqdm.tqdm_notebook(range(len(df))):\n",
+    "    cols = []\n",
+    "    values = []\n",
     "    for c in colNames:\n",
-    "\n",
     "        if c in df and df.iloc[i][c] == df.iloc[i][c]:\n",
     "            cols.append(c)\n",
-    "            values.append(df.iloc[i][c])\n",
+    "            try: \n",
+    "                values.append(int(df.iloc[i][c]))\n",
+    "            except:\n",
+    "                values.append(df.iloc[i][c])\n",
+    "                \n",
     "    try:\n",
+    "        print(df.iloc[i]['ID01'])\n",
+    "        cursor.execute(\"delete from nivel_N1 where ID01 = '%s'\" % ( df.iloc[i]['ID01']))\n",
     "        cursor.execute(\"insert into nivel_N1(%s) values (\\'%s\\')\" % ( ','.join(cols), '\\',\\''.join(map(str,values))))\n",
-    "    except:\n",
-    "        pass\n",
-    "    if i == 1000:\n",
+    "    except Exception as e:\n",
+    "        print('ERROR', e)\n",
+    "    if i == 100:\n",
     "        break\n",
     "cnxn.commit()"
    ]
@@ -186,7 +216,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pandas.read_sql_query(\"select TOP 5 * from Nivel_N1 where VAR_0019 = 'VEN25322789' \", cnxn)"
+    "len('000000000008060061-8000000000VEN25322789020')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pandas.read_sql_query(\"select TOP 5 * from Nivel_N1 where ID01 = '000000000008060061-8000000000VEN25322789020' \", cnxn)"
    ]
   },
   {
