--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -192,15 +192,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "relErrorInLimits(54, 51)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
@@ -215,10 +206,40 @@
     "    resSIP[c] = joinDicts(resSIP[c], parsingDatabaseUtils.getInformationFromProcedureDescription(p))\n",
     "    for k in p.registrosRecienNacido:\n",
     "        resSIP[c] = joinDicts(resSIP[c], parsingDatabaseUtils.getNewbornData(p, k))\n",
+    "    if len(p.registrosRecienNacido):\n",
+    "        resSIP[c]['VAR_0286'] = '0'\n",
     "df = pandas.DataFrame.from_dict(resSIP, orient = 'index')\n",
     "#l = list(df[(df.VAR_0294 != df.VAR_0294) & (df.VAR_0293 != df.VAR_0293)].index)\n",
     "#print(len(l))\n",
     "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def toInt(s, d = 1):\n",
+    "    try:\n",
+    "        s = str(int(s))\n",
+    "        return addZeros(s, d)\n",
+    "    except:\n",
+    "        return \"X\"\n",
+    "def addZeros(s, d):\n",
+    "    return '0' * (d - len(s)) + s \n",
+    "\n",
+    "#Add SIP information\n",
+    "placeId = '806001061-8'\n",
+    "placeId = addZeros(placeId, 20)\n",
+    "df['ID01'] = placeId + df['VAR_0019'].map(lambda s: addZeros(s,20))  \\\n",
+    "                                          + df['VAR_0040'].map(lambda s: toInt(s, 2)) + df['VAR_0286'].map(toInt)\n",
+    "\n",
+    "df['VAR_0198'] = df['VAR_0198'].map(lambda s: str(int(s)) if s == s else s)\n",
+    "df['VERSION'] = '4.1.2'\n",
+    "df['FECHA'] = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "df['HORA'] = datetime.datetime.now().strftime(\"%H:%M:%S\")\n",
+    "df['USUARIO'] = 'CMRC-AUTO'"
    ]
   },
   {
