Added some medication to be recognised...

--- a/databaseFun.ipynb
+++ b/databaseFun.ipynb
@@ -149,14 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def toInt(s, d = 1):\n",
-    "    try:\n",
-    "        s = str(int(s))\n",
-    "        return addZeros(s, d)\n",
-    "    except:\n",
-    "        return \"X\"\n",
-    "def addZeros(s, d):\n",
-    "    return '0' * (d - len(s)) + s "
+    "df = pandas.read_csv('resultsSIP.csv', index_col = 0)"
    ]
   },
   {
@@ -165,17 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pandas.read_csv('resultsSIP.csv', index_col = 0)\n",
-    "placeId = '806001061-8'\n",
-    "placeId = addZeros(placeId, 20)\n",
-    "df['ID01'] = placeId + df['VAR_0019'].map(lambda s: addZeros(s,20))  \\\n",
-    "                                          + df['VAR_0040'].map(lambda s: toInt(s, 2)) + df['VAR_0286'].map(toInt)\n",
-    "\n",
-    "df['VAR_0198'] = df['VAR_0198'].map(lambda s: str(int(s)) if s == s else s)\n",
-    "df['VERSION'] = '4.1.2'\n",
-    "df['FECHA'] = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
-    "df['HORA'] = datetime.datetime.now().strftime(\"%H:%M:%S\")\n",
-    "df['USUARIO'] = 'CMRC-AUTO'"
+    "df.loc['AD363812']"
    ]
   },
   {
@@ -205,8 +188,6 @@
     "        cursor.execute(\"insert into nivel_N1(%s) values (\\'%s\\')\" % ( ','.join(cols), '\\',\\''.join(map(str,values))))\n",
     "    except Exception as e:\n",
     "        print('ERROR', e)\n",
-    "    if i == 100:\n",
-    "        break\n",
     "cnxn.commit()"
    ]
   },
@@ -216,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len('000000000008060061-8000000000VEN25322789020')"
+    "len('000000000008060061-8000000000VEN23258123020')"
    ]
   },
   {
@@ -225,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pandas.read_sql_query(\"select TOP 5 * from Nivel_N1 where ID01 = '000000000008060061-8000000000VEN25322789020' \", cnxn)"
+    "pandas.read_sql_query(\"select  TOP 6 * from Nivel_N1 where ID01 = '000000000806001061-8000000000VEN23258123050' \", cnxn)"
    ]
   },
   {
@@ -243,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VEN25322789"
+    "VEN28350647"
    ]
   }
  ],
