--- a/databaseTransformer.ipynb
+++ b/databaseTransformer.ipynb
@@ -192,6 +192,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 'ASDASD'.split('S')\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "Collapsed": "false"
    },
@@ -208,6 +218,7 @@
     "        resSIP[c] = joinDicts(resSIP[c], parsingDatabaseUtils.getNewbornData(p, k))\n",
     "    if len(p.registrosRecienNacido):\n",
     "        resSIP[c]['VAR_0286'] = '0'\n",
+    "        resSIP[c]['VAR_0285'] = 'A'\n",
     "df = pandas.DataFrame.from_dict(resSIP, orient = 'index')\n",
     "#l = list(df[(df.VAR_0294 != df.VAR_0294) & (df.VAR_0293 != df.VAR_0293)].index)\n",
     "#print(len(l))\n",
@@ -220,6 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
     "def toInt(s, d = 1):\n",
     "    try:\n",
     "        s = str(int(s))\n",
@@ -227,19 +239,7 @@
     "    except:\n",
     "        return \"X\"\n",
     "def addZeros(s, d):\n",
-    "    return '0' * (d - len(s)) + s \n",
-    "\n",
-    "#Add SIP information\n",
-    "placeId = '806001061-8'\n",
-    "placeId = addZeros(placeId, 20)\n",
-    "df['ID01'] = placeId + df['VAR_0019'].map(lambda s: addZeros(s,20))  \\\n",
-    "                                          + df['VAR_0040'].map(lambda s: toInt(s, 2)) + df['VAR_0286'].map(toInt)\n",
-    "\n",
-    "df['VAR_0198'] = df['VAR_0198'].map(lambda s: str(int(s)) if s == s else s)\n",
-    "df['VERSION'] = '4.1.2'\n",
-    "df['FECHA'] = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
-    "df['HORA'] = datetime.datetime.now().strftime(\"%H:%M:%S\")\n",
-    "df['USUARIO'] = 'CMRC-AUTO'"
+    "    return '0' * (d - len(s)) + s "
    ]
   },
   {
@@ -293,12 +293,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfResSIP = pandas.DataFrame.from_dict(resSIP, orient = 'index')\n",
+    "\n",
+    "#Add SIP information\n",
+    "placeId = '806001061-8'\n",
+    "placeId = addZeros(placeId, 20)\n",
+    "dfResSIP['ID01'] = placeId + dfResSIP['VAR_0019'].map(lambda s: addZeros(s,20))  \\\n",
+    "                                          + dfResSIP['VAR_0040'].map(lambda s: toInt(s, 2)) + \\\n",
+    "                                        dfResSIP['VAR_0286'].map(toInt)\n",
+    "dfResSIP['VAR_0198'] = df['VAR_0198'].map(lambda s: str(int(s)) if s == s and s else s)\n",
+    "dfResSIP['VERSION'] = '4.1.2'\n",
+    "dfResSIP['FECHA'] = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "dfResSIP['HORA'] = datetime.datetime.now().strftime(\"%H:%M:%S\")\n",
+    "dfResSIP['USUARIO'] = 'CMRC-AUTO'\n",
+    "\n",
     "dfResSIP.to_csv('resultsSIP.csv')"
    ]
   },
